# BIS_371_Class_Project

./: .gitignore  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
Components/: data_extraction.py
Source/: DataExtractor.py  DatabaseInteractor.py  Updated Query Buttons  Updated Query Buttons  to include Paper_title  class_project_tkinter_GUI_query_tool.py  main.py
Source/database/: table_creation_for_mysql.sql  table_creation_mysql.sql  table_drop_script.sql  values_nontransaction_tables.sql
Source/db/: DatabaseConnector.py  PersonMapper.py
database/: table_creation_mysql.sql  table_drop_script.sql  values_nontransaction_tables.sql
src/backend/: DataExtractor.py  DatabaseInteractor.py  ETLPipeline.py
src/frontend/: class_project_tkinter_GUI_query_tool.py
